# packages/api/src/openapi.json
@@ -1546,7 +1546,7 @@
         ],
         "parameters": [
           {
-            "name": "awardId",
+            "name": "badgeAwardId",
             "in": "path",
             "required": true,
             "schema": {
@@ -1590,7 +1590,7 @@
         ],
         "parameters": [
           {
-            "name": "awardId",
+            "name": "badgeAwardId",
             "in": "path",
             "required": true,
             "schema": {
